<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EditUserFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:titleTextColor="@color/black" />


        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterNamell"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginVertical="@dimen/_14sdp"
            android:hint="@string/enter_name"
            app:layout_constraintEnd_toEndOf="@+id/userImageView"
            app:layout_constraintStart_toStartOf="@+id/userImageView"
            app:layout_constraintTop_toBottomOf="@+id/userImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular_400"
                android:inputType="textPersonName"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterEmailll"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginVertical="@dimen/_14sdp"
            android:hint="@string/enter_emailid"
            app:layout_constraintEnd_toEndOf="@+id/enterNamell"
            app:layout_constraintStart_toStartOf="@+id/enterNamell"
            app:layout_constraintTop_toBottomOf="@+id/enterNamell">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular_400"
                android:inputType="textPersonName"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterAgell"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginVertical="@dimen/_14sdp"
            android:hint="@string/enter_age"
            app:layout_constraintEnd_toEndOf="@+id/enterEmailll"
            app:layout_constraintStart_toStartOf="@+id/enterEmailll"
            app:layout_constraintTop_toBottomOf="@+id/enterEmailll">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular_400"
                android:inputType="number"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_14sdp"
            android:fontFamily="@font/roboto_medium_500"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@+id/enterAgell"
            app:layout_constraintStart_toStartOf="@+id/enterAgell"
            app:layout_constraintTop_toBottomOf="@+id/enterAgell"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>